@@ -75,8 +75,10 @@ public class Mover {
     
     private void add(Source source, StorageGroup target) {
       sources.put(source);
-      targets.put(target);
-      getTargetStorages(target.getStorageType()).add(target);
+      if (target != null) {
+        targets.put(target);
+        getTargetStorages(target.getStorageType()).add(target);
+      }
     }
     
     private Source getSource(MLocation ml) {
@@ -126,12 +128,11 @@ public class Mover {
     for(DatanodeStorageReport r : reports) {
       final DDatanode dn = dispatcher.newDatanode(r.getDatanodeInfo());
       for(StorageType t : StorageType.asList()) {
+        final Source source = dn.addSource(t, Long.MAX_VALUE, dispatcher);
         final long maxRemaining = getMaxRemaining(r, t);
-        if (maxRemaining > 0L) {
-          final Source source = dn.addSource(t, Long.MAX_VALUE, dispatcher); 
-          final StorageGroup target = dn.addTarget(t, maxRemaining);
-          storages.add(source, target);
-        }
+        final StorageGroup target = maxRemaining > 0L ? dn.addTarget(t,
+            maxRemaining) : null;
+        storages.add(source, target);
       }
     }
   }
@@ -155,7 +156,10 @@ public class Mover {
   DBlock newDBlock(Block block, List<MLocation> locations) {
     final DBlock db = new DBlock(block);
     for(MLocation ml : locations) {
-      db.addLocation(storages.getTarget(ml));
+      StorageGroup source = storages.getSource(ml);
+      if (source != null) {
+        db.addLocation(source);
+      }
     }
     return db;
   }
@@ -349,7 +353,7 @@ public class Mover {
       for (final StorageType t : diff.existing) {
         for (final MLocation ml : locations) {
           final Source source = storages.getSource(ml);
-          if (ml.storageType == t) {
+          if (ml.storageType == t && source != null) {
             // try to schedule one replica move.
             if (scheduleMoveReplica(db, source, diff.expected)) {
               return true;
@@ -363,7 +367,9 @@ public class Mover {
     @VisibleForTesting
     boolean scheduleMoveReplica(DBlock db, MLocation ml,
                                 List<StorageType> targetTypes) {
-      return scheduleMoveReplica(db, storages.getSource(ml), targetTypes);
+      final Source source = storages.getSource(ml);
+      return source == null ? false : scheduleMoveReplica(db,
+          storages.getSource(ml), targetTypes);
     }
 
     boolean scheduleMoveReplica(DBlock db, Source source,
